# tmlabs-jr

./: .gitignore  CLAUDE.md  HANDOFF.md  NEXT_PC_SETUP.md
.claude/: settings.json
app/: CMakeLists.txt
app/core/: CMakeLists.txt  FrameTypes.h  IPlugin.h  InputTypes.h  LabsCore.h  PluginHost.cpp  PluginHost.h  SettingsManager.cpp  SettingsManager.h
app/engine/: CMakeLists.txt  ControllerMonitorWidget.cpp  ControllerMonitorWidget.h  LabsBackgroundWidget.h  LabsLogoWidget.h  LabsMainWindow.cpp  LabsMainWindow.h  LabsTheme.cpp  LabsTheme.h  LabsThemeDialog.cpp  LabsThemeDialog.h  Ps5Discovery.cpp  Ps5Discovery.h  main.cpp
app/engine/resources/: labs.qrc  labs.rc
app/plugins/: CMakeLists.txt
app/plugins/cv_python/: CMakeLists.txt  CvPythonPlugin.cpp  CvPythonPlugin.h  ShmBus.cpp  ShmBus.h
app/plugins/display/: CMakeLists.txt  DisplayPlugin.cpp  DisplayPlugin.h
app/plugins/dualsense_input/: CMakeLists.txt  DualSensePlugin.cpp  DualSensePlugin.h
app/plugins/ps_remote_play/: CMakeLists.txt  PSRemotePlayPlugin.cpp  PSRemotePlayPlugin.h  PairPSDialog.cpp  PairPSDialog.h  PsnLoginDialog.cpp  PsnLoginDialog.h
app/plugins/vigem_output/: CMakeLists.txt  ViGEmPlugin.cpp  ViGEmPlugin.h
app/plugins/wgc_capture/: CMakeLists.txt  WgcCapturePlugin.cpp  WgcCapturePlugin.h  WgcSource.cpp  WgcSource.h
app/plugins/xinput_input/: CMakeLists.txt  XInputPlugin.cpp  XInputPlugin.h
app/scripts/: build.ps1  gen_icon.py
labs-engine/: README.md  engine_core.py
labs-engine/LabsSharp/: HANDOFF.md  Labs.sln
labs-engine/LabsSharp/Labs.Engine/: LabsRuntime.cs
labs-engine/LabsSharp/Labs.Engine.Tests/: Labs.Engine.Tests.csproj
labs-engine/LabsSharp/Labs.RemotePlay.Wpf/: App.xaml  App.xaml.cs  ConsolePickerWindow.xaml  ConsolePickerWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NewSessionDialog.xaml  NewSessionDialog.xaml.cs  PsnLoginDialog.xaml  PsnLoginDialog.xaml.cs  RegisterDialog.xaml  RegisterDialog.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  StreamWindow.xaml  StreamWindow.xaml.cs  ThemeWindow.xaml  ThemeWindow.xaml.cs  app.manifest
labs-engine/LabsSharp/Labs.Tests/: Program.cs
labs-engine/LabsSharp/Native/: LabsNative.cs
labs-engine/LabsSharp/cv-scripts/: labs2kmain_runner.py  rhythm_shoot.py
labs-engine/chiaki-ng/: vcpkg.json
labs-engine/chiaki-ng/cmake/: FindOpenSSL.cmake
labs-engine/chiaki-ng/lib/: CMakeLists.txt
labs-engine/chiaki-ng/lib/include/labs/: audio.h  audioreceiver.h  audiosender.h  base64.h  bitstream.h  common.h  config.h  congestioncontrol.h  fec.h  feedback.h  feedbacksender.h  frameprocessor.h  gkcrypt.h  http.h  packetstats.h  pidecoder.h  regist.h  rpcrypt.h  seqnum.h  stoppipe.h  takion.h  takionsendbuffer.h  time.h
labs-engine/chiaki-ng/lib/include/labs/remote/: rudpsendbuffer.h
labs-engine/chiaki-ng/lib/src/: audio.c  bitstream.c  common.c  controller.c  discovery.c  fec.c  feedback.c  ffmpegdecoder.c  frameprocessor.c  http.c  launchspec.c  log.c  opusencoder.c  orientation.c  pidecoder.c  random.c  regist.c  reorderqueue.c  rpcrypt.c  stoppipe.c  thread.c
labs-engine/chiaki-ng/lib/src/remote/: holepunch-test.c  rudp.c  stun.h
labs-engine/chiaki-ng/scripts/: appveyor-win.sh
labs-engine/cv-scripts/: features.py  network_optimizer.py  shot_meter.py  zp_shot_meter.py
labs-engine/scripts/: AiVision.py  SecretK.py  find_ps5.py  labs2kmain.py  xinput_test.py
refence/helios-source/: frida_dump_source.py  frida_helios_trace.js  frida_nba2k_helper.js  helios_settings.ini  qt.conf  reconstructed_InferenceCore_api.h  reconstructed_nba2k_helper.py  version_info.json
refence/helios-source/lib/: COPYING.txt
refence/helios-source/plugins/: psremoteplay.json
refence/helios-source/source_reconstructed/: CMakeLists.txt  HeliosMainWindow.cpp  HeliosMainWindow.h  bot.py  divertx.py  extra.py  icon.py  jajdecoder.py  jajnet.py  main.cpp  nba2k_helper.py  shot.py
refence/helios-source/source_reconstructed/helios_core/: SettingsManager.cpp  SharedMemory.h  UpdateManager.h
refence/helios-source/source_reconstructed/inference_core/: InferenceCore.cpp
refence/helios-source/source_reconstructed/plugins/: CvCpp.h  CvPython.h  DSCapture.cpp  GPC3.cpp  GPC3.h  MagewellCapture.cpp  MagewellCapture.h  OBSCapture.h  OnlineResources.cpp  OnlineResources.h  OpenGLDisplay.cpp  OutputPanel.h  PSRemotePlay.cpp  PSRemotePlay.h  ViGEmOutput.cpp  XboxRemotePlay.cpp
refence/labs-engine/: .gitignore  controller.py  decoderx.py  gym.py  jajdivert.py  labs2kmain.py  nba2k_helper.py  netx.py  skele.py
refence/labs-engine/.claude/: settings.local.json
refence/labs-engine/chiaki-ng/: CMakeLists.txt  README.md
refence/labs-engine/chiaki-ng/cmake/: JsoncExternalProject.cmake  MiniupnpcExternalProject.cmake
refence/labs-engine/chiaki-ng/lib/: CMakeLists.txt  config.h.in
refence/labs-engine/chiaki-ng/lib/include/labs/: controller.h  ctrl.h  discovery.h  discoveryservice.h  ecdh.h  ffmpegdecoder.h  launchspec.h  log.h  opusdecoder.h  opusencoder.h  orientation.h  random.h  reorderqueue.h  senkusha.h  session.h  sock.h  streamconnection.h  thread.h  video.h  videoreceiver.h
refence/labs-engine/chiaki-ng/lib/include/labs/remote/: holepunch.h  rudp.h
refence/labs-engine/chiaki-ng/lib/protobuf/: CMakeLists.txt
refence/labs-engine/chiaki-ng/lib/src/: audioreceiver.c  audiosender.c  base64.c  congestioncontrol.c  ctrl.c  discoveryservice.c  ecdh.c  feedbacksender.c  gkcrypt.c  opusdecoder.c  packetstats.c  pb_utils.h  senkusha.c  session.c  session_shims.c  sock.c  streamconnection.c  takion.c  takionsendbuffer.c  time.c  utils.h  videoreceiver.c
refence/labs-engine/chiaki-ng/lib/src/remote/: holepunch.c  rudpsendbuffer.c
refence/labs-engine/chiaki-ng/scripts/: labs.iss
refence/labs-engine/chiaki-ng/scripts/holepunch/holepunch-go/: go.mod  psn-holepunch-token.go
refence/labs-engine/cv-scripts/: home_spam.py  labs2kmain.py
refence/labs-engine/helios_core/: IPlugin.h  LicenseService.cpp  (+8 more)
refence/zp-higher-lite/: main.py  requirements.txt
zp-bypass/: inject_vx360_mirror.py  launch_bypass.py  shm_relay.py  ssl_ex_hook.js
(+321 files in other folders)
